<resources>
    <string name="app_name">TO-DO App</string>
    <string name="escribe_tarea">Que tienes que hacer ?</string>
    <string name="nombre_usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="Ingreso">Click en Ingresar</string>
    <string name="title_activity_maps">Map</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="registro">Registrando</string>
    <string name="mensaje_1">Click en Ingreso</string>
    <string name="tieneUsuario">Tienes Usuario</string>
    <string name="email">Correo Electronico</string>
    <string name="facebook_app_id">1754223128203809</string>
    <string name="fb_login_protocol_scheme">fb1754223128203809</string>
    <string name="datepicker">Elegir Fecha</string>
    <string name="input_content">Tareas</string>
    <string name="input_hint">Tarea a Adicionar</string>
    <string name="input">Tarea a Adicionar</string>
    <string name="submit">Crear Tarea</string>
    <string name="date_picker">Seleccione la Fecha</string>
    <string name="info_title">Crear Tarea</string>
    <string name="ok">Crear</string>
    <string name="cancel">Cancelar</string>
    <string name="info_description">Soy el Mensaje</string>
    <string name="fecha_select">Fecha Elegida</string>
    <string name="cargar_date">Elegir Fecha</string>
    <string name="success_login_msg">Exito al crear la Tarea</string>
    <string name="error_login_msg">Fallo</string>
    <string name="no_cuenta">No tienes una Cuenta!!</string>
    <string name="recordar_contrasena">Recordar Contraseña</string>
    <string name="registrar_nuevo">Registrar</string>
    <string name="nombres">Nombres Completos </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
