<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="co.edu.ucc.todolist.vistas.fragmentos.LoginFragment">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:indeterminate="true"
        android:visibility="invisible"
        android:id="@+id/progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher_round"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.6">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtEmailLogin"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:passwordToggleEnabled="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPassword"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingresar"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:layout_gravity="center"
                style="@style/BtnAuthStyle"
                android:id="@+id/bntIngresarLogin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recordar_contrasena"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:id="@+id/txtRecordarContrasena" />

        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCrearCuenta"
        android:text="@string/registrar_nuevo"
        android:layout_gravity="bottom"
        style="@style/BtnAuthStyle"/>
    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

</FrameLayout>
